fix bug on mobile detail container

--- a/src/css/_teams.scss
+++ b/src/css/_teams.scss
@@ -1,4 +1,4 @@
-.team-container[data-teamname="England"][data-loaded="true"]{
+*[data-teamname="England"][data-loaded="true"]{
 	@import "teams/England-180";
 
 	@media(min-width:480px){
